--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@ width: 1%;
 height: 900px;
   }
 }
+    @media (max-width:445px){
+  .borderline{
+border-left: 1px solid hsl(180, 66%, 49%);
+position: absolute;
+top: 210%;
+left: 51%;
+width: 1%;
+height: 900px;
+  }
+}
 
 
 .icon1{
